---------------------------------------------------------------------------------------------------
Version: 0.1.2
Date: 24DEC2023
  Balancing:
    - decreased enemy speed
    - increased enemy spawn rate
---------------------------------------------------------------------------------------------------
Version: 0.1.1
Date: 17DEC2023
  Bugfixes:
    - decreased enemy upgrade chance
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 16DEC2023
  Changes:
    - initial release to the mod portal
  Features:
    - Multiplayer compatible
    - Interactive lobby with statistics
    - 20 unique abilities
    - 3 difficulty modes
    - Enemies drop coins when killed
    - Purchase new abilities and upgrades with coins
    - Interactive lobby with top player statistics
  TODO:
    - Chat command to reset all the statistics data
    - Chat command to reset all the statistics data for a specific player
    - Chat command to destroy and rebuild the arena
    - Indestructable starting area / platform? 